compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_private_type_leak_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 850
expression: "external type PrivateType\npub external fn leak_type() -> PrivateType = \"\" \"\""

---
error: Private type used in public interface
  ┌─ /src/one/two.gleam:2:1
  │
2 │ pub external fn leak_type() -> PrivateType = "" ""
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.

